tests/core/snapshots/test-http-batchKey.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
snapshot_kind: text
---
schema @server(port: 8000) @upstream(batch: {delay: 10, headers: [], maxSize: 1000}) {
  query: Query
}

type Bar {
  barName: String!
  id: ID!
}

type Foo {
  barId: String!
  bars: [Bar!]!
    @http(
      url: "http://jsonplaceholder.typicode.com/bar"
      batchKey: ["bars", "id"]
      query: [{key: "baz", value: "static_value"}, {key: "barId[]", value: "{{.value.barId}}"}]
    )
  fooName: String!
  id: ID!
}

type FooResponse {
  foos: [Foo!]!
}

type Query {
  foos: FooResponse @http(url: "http://jsonplaceholder.typicode.com/foo")
}
