tests/core/snapshots/test-http-headers.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
snapshot_kind: text
---
schema @server @upstream {
  query: Query
}

type Query {
  foo: String @http(url: "http://localhost:4000/foo", headers: [{key: "foo", value: "bar"}])
}
