tests/core/snapshots/test-http-tmpl.md_client.snap
---
source: tests/core/spec.rs
expression: formatted
---
type Post {
  id: Int
  user: User
  userId: Int!
}

type Query {
  posts: [Post]
}

type User {
  id: Int
  name: String
}

schema {
  query: Query
}
