tests/core/snapshots/test-http-with-add-field.md_error.snap
---
source: tests/core/spec.rs
expression: errors
---
[
  {
    "message": "Cannot add field",
    "trace": [
      "tests/execution/test-http-with-add-field.md 5#12"
    ],
    "description": "Path: [post, user, name] contains resolver http at [Post.user]"
  }
]
