tests/core/snapshots/test-http-with-inline.md_error.snap
---
source: tests/core/spec.rs
expression: errors
---
[
  {
    "message": "Cannot add field",
    "trace": [
      "Query",
      "@addField"
    ],
    "description": "Path: [post, user, name] contains resolver http at [Post.user]"
  }
]
