tests/core/snapshots/test-http-with-mustache-expr.md_0.snap
---
source: tests/core/spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "a": {
        "bc": {
          "d": {
            "e": 1
          },
          "f": true
        }
      }
    }
  }
}
