tests/core/snapshots/test-http-with-mustache-expr.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
---
schema @server @upstream {
  query: Query
}

type A {
  a: Int
  bc: BC @expr(body: {d: "{{.value.d}}", f: "{{.value.f}}"})
  d: D @modify(omit: true)
}

type BC {
  d: D
  f: Boolean
}

type D {
  e: Int
}

type Query {
  a: A @http(url: "http://localhost:3000/a")
}
